[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/RoleSkin.gd" type="Script" id=1]
[ext_resource path="res://Player/FloorDetector.tscn" type="PackedScene" id=2]

[node name="RoleSkin" type="Position2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="FloorDetector" parent="." instance=ExtResource( 2 )]
cast_to = Vector2( 0, 60 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
